# Counter-Strike

./: CMakeLists.txt  Counter_Strike.docx  README.md
include/: BattleField.h  Defines.h  Pistol.h  Player.h
src/: BattleField.c  Pistol.c  Player.c  main.c
